  output on the commandline properly (Björn "Vampire" Kautler)

- Improve integration with Unity Launcher. Without this change if you pin jEdit
  to the Launcher and then run it, a separate icon for the running instance is
  shown. With this change this is correctly merged with the pinned starter.
  (Björn "Vampire" Kautler) 
  
}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 4.4pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry,
Shlomy Reinstein, Damien Radtke, Dale Anson, Matthieu Casanova,
Eric Le Lay, Bernhard Walle, Joerg Spieler, Kevin Hunter, François Rey,
Dion Whitehead, Marcelo Vanzin, Jesse Pavel, Jakub Roztočil,
Kazutoshi Satoda, Anshal Shukla, Milutin Jovanović, Vadim Voituk,
goebbe, James Nicholl, Uwe donovaly, Sergey Mezentsev, Jim Lawton,
Suraj Kurapati, Paulo Moura, curtis_call, Rowan Collins,
Stephen Blackheath, asitdepends, Michael Schlotter, Robin Neatherway,
strank, and Hisateru Tanaka for contributing to this release.

{{{ Bug fixes


- Fixed an exception when trying to add new menu items to the context menu
  if some ActionSets have been unloaded (plugin deactivation)
  (Matthieu Casanova #3071355)


- Windows installer tries to quit existing jEdit instance before trying to
  install (Björn "Vampire" Kautler)

- Closes menus when toggling dockables. (#3022084 - Anshal Shukla)

- VFSBrowser escape handling fixed when used as a dialog (#3101808 - Alan Ezust)

- Context menu sorted when adding toolbar buttons (#3074164 - Alan Ezust)

- Fixed an exception when clicking ok while adding new action to the context
  menu if no action has been selected (Matthieu Casanova #3072546)

- Fixed TextArea.selectBlock() when the block is at offset 0
  (Jesse Pavel #3062072)

- Fixed a memory leak in the beanshell snippet replacement
  (Matthieu Casanova #3043132)

- The "buffer" variable is always the current buffer and not the buffer
  where the replacement occurs when using beanshell snippet replacement